k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alie-prod
  labels:
    name: alie-prod
    environment: production
